fix: Remove postinstall problemático que impedia npm install
- Remove script postinstall que rodava antes de @prisma/client estar instalado
- Adiciona prisma generate no script build (roda no deploy)
- Atualiza db:setup para incluir prisma generate
- Resolve erro MODULE_NOT_FOUND no npm install

--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "dev:clean": "rimraf .next && npm run dev",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "postinstall": "prisma generate && prisma migrate deploy",
-    "db:setup": "prisma migrate deploy",
+    "db:setup": "prisma generate && prisma migrate deploy",
     "db:reset": "prisma migrate reset --force",
     "db:studio": "prisma studio"
   },
